removido endpoint filter e deixado apenas find many no modulo de tarefas
